# kidd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
src/: CMakeLists.txt  main.cpp
src/kidd/: kidd.cpp  kidd.h  test.h  type.h  window.cpp  window.h
src/kidd/components/: view.cpp  view.h
src/kidd/config/: arg_config.h  global_info.h  window_config.h
src/kidd/event/: event.h  event_poll.cpp  event_poll.h
src/kidd/utils/: logger.h  ncurses_utils.h
src/kidd/utils/gapbuffer/: gap_buffer.cpp  gap_buffer.h  gapbuffer.cpp  gapbuffer.h
